--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+.env
+.vercel
+.env*.local
+
+# Docker (local debug only)
+Dockerfile
+docker-compose.yml
+.dockerignore
